# tunestack

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES  build.sh
include/api/: ITunes.hpp  LastFM.hpp  YouTube.hpp
include/core/: App.h  App.hpp  AppStatus.hpp  EventBus.hpp  MediaManager.hpp  PlayQueue.hpp  Player.hpp  PlaylistManager.hpp  Radio.hpp  Settings.hpp  TextureCache.hpp  Track.hpp  Window.h  Window.hpp  YtDlp.hpp
include/ui/: Colors.hpp  Flags.hpp  Fonts.hpp  Layout.hpp
include/ui/panels/: BottomBar.hpp  MainView.hpp  SearchResults.hpp  SettingsModal.hpp  SideBar.hpp  TopBar.hpp
src/: main.cpp
src/api/: ITunes.cpp  LastFM.cpp  YouTube.cpp
src/core/: App.cpp  AppStatus.cpp  EventBus.cpp  MediaManager.cpp  PlayQueue.cpp  Player.cpp  PlaylistManager.cpp  Radio.cpp  Settings.cpp  TextureCache.cpp  Window.cpp  YtDlp.cpp
src/ui/panels/: BottomBar.cpp  MainView.cpp  SearchResults.cpp  SettingsModal.cpp  SideBar.cpp  TopBar.cpp
